--- a/LightControl/LightControl.csproj
+++ b/LightControl/LightControl.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\App.test.tsx" />
     <None Remove="ClientApp\src\App.tsx" />
     <None Remove="ClientApp\src\components\Counter.tsx" />
     <None Remove="ClientApp\src\components\FetchData.tsx" />
@@ -36,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\App.test.tsx" />
     <TypeScriptCompile Include="ClientApp\src\App.tsx" />
     <TypeScriptCompile Include="ClientApp\src\components\Counter.tsx" />
     <TypeScriptCompile Include="ClientApp\src\components\FetchData.tsx" />
