--- a/light-control-client/package.json
+++ b/light-control-client/package.json
@@ -9,8 +9,10 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
+    "@types/react-color": "^3.0.1",
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
+    "react-color": "^2.18.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
