--- a/LightControlServer/appsettings.Development.json
+++ b/LightControlServer/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
+      "Default": "Debug",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "IncludeScopes":  true
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
