--- a/LightControlServer/LightControlServer.csproj
+++ b/LightControlServer/LightControlServer.csproj
@@ -12,6 +12,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="MQTTnet.AspNetCore" Version="3.0.9" />
+    <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="3.0.9" />
   </ItemGroup>
 
 
